--- a/content/bpj26.html
+++ b/content/bpj26.html
@@ -141,7 +141,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <br /><h1>bpj26</h1><br />About << <a href='About.html'>Previous</a> </div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <br /><h1>bpj26</h1>
+<p>test1</p><br />About << <a href='About.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
