--- a/content/index.html
+++ b/content/index.html
@@ -129,7 +129,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='bpj26.html'>bpj26</a></li>
+                     <li><a href='About.html'>About</a><li><a href='bpj26.html'>bpj26</a><li><a href='2b-bpj7.html'>2b-bpj7</a></li>
                       </ul>
                 </nav>
               </div>
