--- a/content/About.html
+++ b/content/About.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='bpj26.html'>bpj26</a></li>
+                     <li><a href='About.html'>About</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,10 +141,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='bpj26.html'>Next</a> >> bpj26<br /><h1>About</h1>
+    <div id="tipue_search_content"> <br /><h1>About</h1>
 <p>cmsimde_site</p>
 <p></p>
-<br /> <a href='bpj26.html'>Next</a> >> bpj26</div>
+<br /> </div>
         
     <!-- footer -->
       <div class="container">
