--- a/content/testpage.html
+++ b/content/testpage.html
@@ -141,11 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='testpage.html'>Next</a> >> testpage<br /><h1>About</h1>
-<p>cmsimde_site</p>
-<p></p>
-<p></p>
-<br /> <a href='testpage.html'>Next</a> >> testpage</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <br /><h1>testpage</h1><br />About << <a href='About.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
